# SteamKit

./: .gitignore  CMakeLists.txt  CMakePresets.json  readme.md
SteamKitCpp/: CMakeLists.txt  README.md  vcpkg.json
SteamKitCpp/cmake/: SteamKitCppConfig.cmake.in
SteamKitCpp/include/steamkit/: async_job.hpp  callbacks.hpp  client.hpp  configuration.hpp  enums.hpp  exception.hpp  handlers.hpp  messages.hpp  result.hpp  steamkit.hpp  types.hpp
SteamKitCpp/samples/: level_probe.cpp
SteamKitCpp/src/: async_job.cpp  callbacks.cpp  client.cpp  messages.cpp  result.cpp  types.cpp
SteamKitCpp/tests/: generator_tests.ps1  secret_ignore_tests.ps1  smoke_tests.cpp  steamkitcpp_tests.cpp
SteamKitCpp/tools/: generate_steamlang_cpp.py
docs/: STEAMKITCPP.md  STEAMKITCPP_API.md  STEAMKITCPP_ARCHITECTURE.md  STEAMKITCPP_BUILDING.md  STEAMKITCPP_CODEGEN.md  STEAMKITCPP_MIGRATION.md  STEAMKITCPP_PARITY_ROADMAP.md  STEAMKITCPP_SECURITY.md  STEAMKITCPP_TESTING.md
